# qkv_fusion

./: .gitignore  LICENSE  MANIFEST.in  README.md  analyze_overhead.py  profile_correct_hidden.txt  profile_kernels.py  pyproject.toml  results_3.txt  setup.py  setup_env.sh  test_correct_hidden.txt  test_cublas_direct.py  test_cublaslt.txt  test_cublaslt4.txt  test_cublaslt6.txt  test_cublaslt7.txt  test_cublaslt8.txt  test_cublaslt_9.txt  test_cublaslt_epilogue_correctness.py  test_cublaslt_epilogue_correctness.txt  test_cublastlt5.txt  test_fallback.txt  test_fallback1.txt  test_lead_dim_change.txt  test_no_split.txt  test_no_split_debug.txt  test_no_split_debug2.txt  test_optimized.py  test_optimized_split.txt  test_qkv_fusion.py  test_result_2.txt
benchmarks_and_tests/: README.md  benchmark_all_approaches.py  check_contiguous.py  debug_gemm_overhead.py  debug_gemm_wrapper_overhead.py  profile_kernels.py  profile_lightweight.py  run_phase3_benchmark.sh  test_bias_broadcast.py  test_optimized.py  trace_exact_timing.py  verify_no_bias_kernel.py  verify_timing_methods.py
benchmarks_and_tests/results/: benchmark_all_approaches.txt  benchmark_all_approaches2.txt  debug_gemm_overhead.txt  profile_lightweight.txt  test_acc_fp32.txt  test_cublas.txt  test_fallback_cublas.txt  test_fallback_lt.txt  test_fallback_lt2.txt  test_lightweight.txt  test_optimized_result.txt  test_revert_dim_change.txt  trace_exact_timing.txt
csrc/: qkv_fused_api.cpp  qkv_fused_params.h
examples/: flash_attention_integration.py
qkv_fusion/: __init__.py  qkv_interface.py  weight_utils.py
(+4 files in other folders)
